--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             let start = document.getElementById('btnStart');
             let stop = document.getElementById('btnStop');
             let vidSave = document.getElementById('vid2');
-            let mediaRecorder = new MediaRecorder(mediaStreamObj, {bitsPerSecond: 510000});
+            let mediaRecorder = new MediaRecorder(mediaStreamObj, {bitsPerSecond: 5100000});
             let chunks = [];
             
             start.addEventListener('click', (ev)=>{
